--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,14 @@
         "auth-bridge"
     ],
     "require": {
-        "php": "^8.2",
-        "illuminate/auth": "^10.0|^11.0",
-        "illuminate/contracts": "^10.0|^11.0",
-        "illuminate/http": "^10.0|^11.0",
-        "illuminate/support": "^10.0|^11.0"
+        "php": "^8.4",
+        "illuminate/auth": "^12.0",
+        "illuminate/contracts": "^12.0",
+        "illuminate/http": "^12.0",
+        "illuminate/support": "^12.0"
     },
     "require-dev": {
-        "orchestra/testbench": "^8.0|^9.0"
+        "orchestra/testbench": "^10.0"
     },
     "autoload": {
         "psr-4": {
