App Onboarding Flow
• Onboarding Flow

  - src/Console/OnboardCommand.php:13-145 introduces the one-shot auth-bridge:onboard command: it validates the base URL, installs/publishes the bridge, optionally bootstraps via the Auth API, writes
    the required .env keys idempotently, then chains the scaffold and health-check commands while honoring --dry, --client-*, --bootstrap-token, and account options.
  - src/Console/ScaffoldCommand.php:13-272 adds idempotent scaffolding for the OAuth controller/middleware/routes with a --force escape hatch, Kernel alias injection, and clearly marked route stubs so
    re-runs stay clean.
  - Support commands (src/Console/BootstrapAppCommand.php:12-57, InstallCommand.php:11-23, CheckCommand.php:12-54) cover API-only bootstrapping, publish+migrate install, and /health + /user smoke tests
    (token supplied via --token or AUTH_BRIDGE_CHECK_TOKEN).

  Config & Wiring

  - config/auth-bridge.php:26-39 now exposes internal_bootstrap_path and default_redirect_suffix so the commands can read sane defaults from config/env.
  - src/AuthBridgeServiceProvider.php:13-59 registers all new console commands whenever the package runs in console mode, keeping them discoverable via Artisan.
  - composer.json:13-20 gains the illuminate/filesystem runtime dependency required by the scaffolder.

  Testing

  - Not run (not requested).

  Next steps (if you want to continue): 1) add the Pest/Testbench coverage mentioned in the original plan so the new commands stay regression-proof; 2) consider extending auth-bridge:check/auth-
  bridge:onboard with CI-friendly secret handling (e.g., suppressing client-secret output unless explicitly requested).

--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "php": "^8.4",
         "illuminate/auth": "^12.0",
         "illuminate/contracts": "^12.0",
+        "illuminate/filesystem": "^12.0",
         "illuminate/http": "^12.0",
         "illuminate/support": "^12.0"
     },
